--- a/Aplicacion/css/css.css
+++ b/Aplicacion/css/css.css
@@ -16,6 +16,7 @@ body {
 	position:relative;
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
+	border-radius: 25px;	
 }
 
 div#animateDiv{
@@ -87,8 +88,8 @@ div#welcomeLanguage{
 	position:relative;
 	width: 200px;
 	left:400px;
-	opacity:.001;
-	display:none;
+	/*opacity:.001;
+	display:none;*/
 }
 
 div#welcomeLanguage>a{
@@ -103,16 +104,41 @@ div#welcomeLanguage>a:hover{
 img#logoApollame{
 	margin-top: 20px;
 	margin-left: 20px;
+	margin-right: 20px;
 }
 
 ul#nav{
 	display: inline-block;
 	list-style: none;
 	overflow: hidden;
+	height: 50px;
+	background: #F2F2F2;
 }
 
 ul#nav>li{
 	display: inline-block;
+}
+
+ul#nav>li>A{
+	font-size: 1.2em;
+	text-transform: capitalize;
+	text-decoration: none;
+	font-weight: bold;	
+	margin: 2px;
+	padding-left:4px;
+	padding-right:4px;
+	text-align: center;
+	color: #0B0146;
+}
+
+ul#nav>li>A:visited {
+	text-decoration: none;
+	color: #0B0146;
+}
+
+ul#nav>li>A:hover {
+	text-decoration: none;
+	color: #51A0C8;
 }
 
 div#content{
